--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,7 +8,7 @@ marshmallow==3.20.1
 marshmallow-sqlalchemy==0.28.1
 python-dotenv==1.0.0
 sendgrid==6.11.0
-cloudinary==2.7.0
+cloudinary
 Pillow==10.0.0
 Flask-Cors==4.0.0
 Werkzeug==3.0.0
