--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
 FLASK_ENV=development
 SECRET_KEY=change-me
 JWT_SECRET_KEY=jwt-change-me
-DATABASE_URL=postgresql+psycopg2://postgres:password@localhost:5432/afyalink
+DATABASE_URL=postgresql://afyalink_user:newpassword@localhost:5432/afyalink_db
 ITEMS_PER_PAGE=12
 SENDGRID_API_KEY=
 CLOUDINARY_CLOUD_NAME=
