--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,80 @@
+alembic==1.12.0
+aniso8601==10.0.1
+annotated-types==0.7.0
+anyio==3.7.1
+asttokens==3.0.0
+bcrypt==4.0.1
+blinker==1.9.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+cloudinary==1.36.0
+cryptography==46.0.3
+decorator==5.2.1
+distro==1.9.0
+dnspython==2.8.0
+email-validator==2.1.0
+executing==2.2.1
+Faker==19.6.1
 Flask==2.3.3
-Flask-RESTful==0.3.9
-Flask-JWT-Extended>=4.5.1
-Flask-Migrate==4.0.4
-Flask-SQLAlchemy==3.0.3
-psycopg2-binary==2.9.6
-marshmallow==3.20.1
-marshmallow-sqlalchemy==0.28.1
-python-dotenv==1.0.0
-sendgrid==6.11.0
-cloudinary
-Pillow==10.0.0
+Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
-Werkzeug==3.0.0
+Flask-JWT-Extended==4.6.0
+flask-marshmallow==1.3.0
+Flask-Migrate==4.0.5
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.0.5
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+ipdb==0.13.9
+ipython==9.6.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
+marshmallow==3.20.1
+marshmallow-sqlalchemy==0.29.0
+matplotlib-inline==0.2.1
+openai==1.3.0
+packaging==25.0
+parso==0.8.5
+pexpect==4.9.0
+Pillow==10.0.0
+prompt_toolkit==3.0.52
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.23
+pydantic==2.12.3
+pydantic_core==2.41.4
+Pygments==2.19.2
+PyJWT==2.10.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-http-client==3.3.7
+python-slugify==8.0.1
+pytz==2024.2
+requests==2.32.5
+sendgrid==6.12.5
+setuptools==70.3.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+sqlalchemy-serializer==1.4.22
+stack-data==0.6.3
+text-unidecode==1.3
+toml==0.10.2
+tqdm==4.67.1
+traitlets==5.14.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.14
+Werkzeug==3.1.3
