--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18 <19"
+  },
   "proxy": "http://localhost:4000",
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
