--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,6 +26,7 @@ Flask-Migrate==4.0.5
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.0.5
 greenlet==3.2.4
+gunicorn==20.1.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
