--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
 FLASK_ENV=development
 SECRET_KEY=change-me
 JWT_SECRET_KEY=jwt-change-me
-DATABASE_URL=postgresql://afyalink_user:newpassword@localhost:5432/afyalink_db
+DATABASE_URL=postgresql://afyalink_db_p26q_user:a3SkTSKV751rpdD6wTkvO2C3bgtZc7Xs@dpg-d44gfnbipnbc73ft5b3g-a.oregon-postgres.render.com/afyalink_db_p26q
 ITEMS_PER_PAGE=12
 SENDGRID_API_KEY=
 CLOUDINARY_CLOUD_NAME=
